# sun-template

./: build_sgtk.py  pyproject.toml
.github/scripts/: install_build_dependencies.py
.github/workflows/: build_sgtk.yaml
sgtk/: app.py  info.yml
