[project]
name = "sun-template"
dynamic = ["version"]
description = "Template repo structure to test workflow and sgtk deployment"
authors = [
    { name = "Kim Strandli", email = "kim.s@suncreature.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "QtPy",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]  # Glob for all files in data/

[tool.sgtk_build]
sgtk_name = "sgtk-desktop-sun-template"
version_file = "version.py"
sgtk_includes = ["version.py"]
build_dependencies = [
#    "sun_sgtk @ git+https://github.com/SunCreature/sun_sgtk.git"
]
vendor_packages = [
    "sun_template @ git+https://github.com/KimStrandliSC/sun-template.git@main",
]